objects/DMAPP__DM_Political_Map_Influence__c.object
<CustomObject>
    <description>DEPRECATED - DO NOT USE</description>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Influenced_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Influenced</label>
        <referenceTo>DMAPP__DM_Opportunity_Contact_Extra__c</referenceTo>
        <relationshipName>Influenced_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Influencing_Contact__c</fullName>
        <label>Influencer</label>
        <referenceTo>DMAPP__DM_Opportunity_Contact_Extra__c</referenceTo>
        <relationshipName>Influences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Opportunity__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>DM_Political_Map_Influences</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ZZ DM Political Map Influence</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DM Political Map Influence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Political Map Influences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>